# ppg-beats

./: .gitignore  CLAUDE.md  mkdocs.yml
docs/functions/: msptdfastv1_beat_detector.md  msptdfastv2_beat_detector.md
docs/tutorials/: designing_beat_detector.md
ppg_beats/: __init__.py  _utils.py  ppg_detectbeats.py  pyproject.toml
ppg_beats/detectors/: __init__.py  ampd.py  atmax.py  coppg.py  erma.py  heartpy.py  ims.py  mmpdv2.py  msptd.py  pda.py  qppg.py  swt.py  wepd.py
ppg_beats/docs/: index.md
